- Fixed Edit Lights/Switches Smoke Detector type
- Solved HTML checkbox 'ischecked' property duo upgrade to new JQuery
- P1 Smart meter, Gas value now send when changed, or every 5 minutes
- Implemented Motion Detector
- Implemented Smoke Detector Off image
- Implemented 'Delay Off' for Motion detectors
- Fixed: Not displaying the 'timer' option for certain devices

Version 1.0.8 (February 3th 2013)
- Fixed Hardware Enabled/Disabled option
- Fixed Light/Switches timer, time dropdown combobox
- Implemented OWL113 current logging/chart
- Implemented OWL113 Ampere Notifications
- Implemented P1 Energy Meter/P1 Gas Meter/YouLess, usage notification
- Implemented P1 Gas Meter/YouLess/RFXMeter, today notification
- Implemented P1 Energy Meter, today notification
- Removed SQLite MFC runtime dependency
- Source code cleanup (moved things to seperate folders)
- HTML cleanup (Updated to newer libraries as well)
- Alternative webpage username/password reset (resetpwd file)
- Implemented inverted blinds switch type
- When setting switch level = 0, the switch is turned Off now
- Setting a switch level is now done by setting the level to 0=Off, 1..xx for the level
- New (Windows) command line argument (-nobrowser) do not start web browser
- Implemented switchtype 'Dimmer' (not working on iPhone yet.. strangely enough)

Version 1.0.7 (January 18th 2013)
- replaced all localtime function with localtime_r
- Dashboard: P1 Smart Meter Energy does not show the retour values if not used
- Devices Tab: Check if any device is selected to delete
- Support for MAC serial ports
- Error message when serial port get disconnected
- updated to RFCOM SDK version 6.01
- Dashboard now includes server date
- Barometer graph values now displays as whole number
- Meter values now only inserted in meter table when there is a difference in value
- Implemented utility graph 'last 24 hours usage'
- Added jwsmtp class